# server-example

./: .gitignore  Cargo.toml  config-example.toml
etc/: nginx-example.conf  supervisor-example.conf
src/: backport.rs  config.rs  db.rs  forms.rs  main.rs  models.rs  session.rs  sms_daemon.rs
src/dtl_impls/: consumer.rs  mod.rs  news.rs  payment.rs  user.rs
src/models/: consumer.rs  mod.rs  news.rs  user.rs  volume_payment.rs
src/session/: mod.rs  plugins.rs
src/static/css/: common.css  printable.css  starter-template.css
src/static/js/: consumer-table-manager.js  table-manager.js
src/templates/: base.htmt  consumer.htmt  login.htmt  main.htmt
src/templates/admin/: add_user.htmt  base.htmt  consumer.htmt  main.htmt
src/templates/admin/consumers/: all.htmt  single.htmt
src/templates/admin/news/: add.htmt  list.htmt  single.htmt
src/templates/admin/users/: all.htmt
src/templates/admin/volume_payments/: printable.htmt  single.htmt
src/views/: consumer.rs  filters.rs  login.rs  main.htmt  main.rs  mod.rs  static_files.rs  utils.rs
src/views/admin/: main.rs  mod.rs  user.rs  volume_payment.rs
src/views/admin/consumer/: main.rs  mod.rs
src/views/admin/consumers/: add.rs  list.rs  mod.rs  single.rs
src/views/admin/news/: add.rs  forms.rs  main.rs  mod.rs  single.rs
src/views/admin/users/: add.rs  list.rs  mod.rs
src/views/admin/volume_payments/: mod.rs  single.rs
src/views/consumer/: main.rs  mod.rs
