[package]
name = "hello_world"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]

[dependencies]
iron = "*"
router = "*"
postgres = "0.9.3"
r2d2 = "0.6.0"
r2d2_postgres = "0.9.2"
dtl = "0.0.1"

[dependencies.persistent]
git = "https://github.com/iron/persistent.git"

[[bin]]
name = "shop"