[package]
name = "hello_world"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]

[dependencies]
rand = "0.3"
iron = "*"
router = "*"
mount = { git = "https://github.com/iron/mount.git", version = "0.0.7" }
persistent = { git = "https://github.com/iron/persistent.git" }
staticfile = "*"
oatmeal_raisin = { git = "https://github.com/SkylerLipthay/oatmeal_raisin.git" }
postgres = {version = "0.9.3", features = ["chrono"] }
r2d2 = "0.6.0"
r2d2_postgres = "0.9.2"
dtl = {version = "0.0.2", features= ["chrono"], git = "https://github.com/SlNPacifist/rust-dtl" }
chrono = "0.2"
urlencoded = "0.2"

[[bin]]
name = "shop"